[project]
name = "aptus-homeassistant"
version = "0.1.0"
description = "Home Assistant custom integration for Aptus building access portals"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9",
    "beautifulsoup4>=4.12",
]

[dependency-groups]
dev = [
    "aioresponses>=0.7.6",
    "codespell>=2.3",
    "pre-commit>=3.7",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-homeassistant-custom-component>=0.13",
    "ruff>=0.7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=custom_components/aptus --cov-report=xml --cov-report=term-missing"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN001",  # Missing type annotation for function argument
    "ANN002",  # Missing type annotation for *args
    "ANN003",  # Missing type annotation for **kwargs
    "ANN201",  # Missing return type annotation for public function
    "ANN202",  # Missing return type annotation for private function
    "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed
    "COM812",  # Incompatible with formatter
    "D100",    # Missing docstring in public module
    "D101",    # Missing docstring in public class
    "D102",    # Missing docstring in public method
    "D103",    # Missing docstring in public function
    "D105",    # Missing docstring in magic method
    "D107",    # Missing docstring in __init__
    "D203",    # No blank line before class (incompatible with formatter)
    "D212",    # Multi-line summary first line (incompatible with formatter)
    "E501",    # Line too long (handled by formatter)
    "EM101",   # Exception must not use a string literal
    "EM102",   # Exception must not use an f-string literal
    "FBT001",  # Boolean positional arg in function definition
    "FBT002",  # Boolean default value in function definition
    "ISC001",  # Incompatible with formatter
    "PLR0913", # Too many arguments to function call
    "PLR2004", # Magic value used in comparison
    "SLF001",  # Private member accessed
    "TC001",   # Move application import into a type-checking block
    "TC002",   # Move third-party import into a type-checking block
    "TC003",   # Move standard library import into a type-checking block
    "TRY003",  # Avoid specifying long messages outside the exception class
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG001",  # Unused function argument (fixtures)
    "ARG002",  # Unused method argument
    "D104",    # Missing docstring in public package
    "E402",    # Module level import not at top of file
    "F841",    # Local variable assigned but never used
    "INP001",  # Implicit namespace package
    "B017",    # Do not assert blind exception
    "DTZ001",  # datetime without tzinfo in tests
    "PLC0415", # Import not at top level (common in HA test patterns)
    "PT011",   # pytest.raises too broad
    "S101",    # Use of assert
    "S105",    # Possible hardcoded password
    "S106",    # Possible hardcoded password
    "SIM105",  # Use contextlib.suppress
]
"custom_components/**/*.py" = [
    "ARG001",  # Unused function argument (HA interface contracts)
    "ARG002",  # Unused method argument (HA interface contracts)
]
".github/**/*.py" = [
    "INP001",  # Implicit namespace package
    "T201",    # Print found
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = ["custom_components.aptus"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.lint.mccabe]
max-complexity = 25
